gcc/testsuite/rust/rustc/ui/parser/issues/issue-98601-delimiter-error-unexpected-close_dg.rs
fn main() {
    todo!();
}

fn other(_: i32)) {} // { dg-error "" "" { target *-*-* } }

